// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Img /> should render fixed size images 1`] = `
<div>
  <div
    class=" gatsby-image-outer-wrapper"
    style="position: relative;"
  >
    <div
      class="fixedImage gatsby-image-wrapper"
      style="position: relative; overflow: hidden; display: inline; width: 100px; height: 100px;"
    >
      <div
        style="width: 100px; opacity: 0; height: 100px;"
        title="Title for the image"
      />
      <picture>
        <source
          srcset="some srcSetWebp"
          type="image/webp"
        />
        <source
          srcset="some srcSet"
        />
        <img
          alt="Alt text for the image"
          height="100"
          src="test_image.jpg"
          style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 1;"
          title="Title for the image"
          width="100"
        />
      </picture>
      <noscript>
        &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" /&gt;&lt;source srcSet="some srcSet" /&gt;&lt;img width="100" height="100" src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
      </noscript>
    </div>
  </div>
</div>
`;

exports[`<Img /> should render fluid images 1`] = `
<div>
  <div
    class=" gatsby-image-outer-wrapper"
    style="position: relative;"
  >
    <div
      class="fixedImage gatsby-image-wrapper"
      style="position: relative; overflow: hidden; display: inline;"
    >
      <div
        style="width: 100%; padding-bottom: 66.66666666666667%;"
      />
      <div
        style="position: absolute; top: 0px; bottom: 0px; opacity: 0; right: 0px; left: 0px;"
        title="Title for the image"
      />
      <picture>
        <source
          sizes="(max-width: 600px) 100vw, 600px"
          srcset="some srcSetWebp"
          type="image/webp"
        />
        <source
          sizes="(max-width: 600px) 100vw, 600px"
          srcset="some srcSet"
        />
        <img
          alt="Alt text for the image"
          src="test_image.jpg"
          style="position: absolute; top: 0px; left: 0px; width: 100%; height: 100%; opacity: 1;"
          title="Title for the image"
        />
      </picture>
      <noscript>
        &lt;picture&gt;&lt;source type='image/webp' srcSet="some srcSetWebp" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;source srcSet="some srcSet" sizes="(max-width: 600px) 100vw, 600px" /&gt;&lt;img src="test_image.jpg" alt="Alt text for the image" title="Title for the image" style="position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center"/&gt;&lt;/picture&gt;
      </noscript>
    </div>
  </div>
</div>
`;
